Fix project card spacing
Fix spacing issues in the project card.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -134,8 +134,6 @@ p {
 }
 
 .project-title {
-    font-size: 19px;
-    font-weight: bold;
     margin: 0;
 }
 
@@ -146,6 +144,7 @@ p {
 
 .project-desc {
     font-size: 22px;
+    margin: 0;
 }
 
 .meeting {
